
name:                runhs
version:             0.1.0.0
synopsis:            Sets up a sandbox for safer scripting via `runhaskell`
-- description:
homepage:            https://github.com/danclien/runhs
license:             Apache-2.0
license-file:        LICENSE
author:              Dan Lien
maintainer:          dan@danclien.com
category:            Scripting
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8
                     , turtle
  hs-source-dirs:      src
  default-language:    Haskell2010